// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Act II economy tuning > generates deterministic Act II reward, vault, and shop surfaces from fresh save context > fresh act II economy 1`] = `
{
  "act": {
    "id": "act_core_descent",
    "label": "Act II",
    "priceAdjustment": 1,
    "rewardTier": "escalated",
  },
  "eliteRewards": [
    [
      "item_forkline_dynamo",
      "route source",
    ],
    [
      "item_lane_splitter_chisel",
      "Elite pool",
    ],
    [
      "item_claimant_arc_seal",
      "elite source",
    ],
  ],
  "rerollCosts": [
    3,
    4,
  ],
  "shop": {
    "count": 3,
    "items": [
      [
        "item_rebound_freight_seal",
        18,
        "shop source",
      ],
      [
        "item_crossfeed_detonator",
        22,
        "boss source",
      ],
      [
        "item_scrap_saints_relay",
        15,
        "Shop pool",
      ],
    ],
  },
  "vaultRewards": [
    [
      "item_plasma_bloom_filter",
      "vault source",
    ],
    [
      "item_excess_warhead_clause",
      "vault source",
    ],
    [
      "item_strata_bore_collimator",
      "vault source",
    ],
  ],
}
`;

exports[`Act II economy tuning > generates deterministic progressed-save Act II economy without changing upgrade accounting > progressed act II economy 1`] = `
{
  "act": {
    "id": "act_core_descent",
    "label": "Act II",
    "priceAdjustment": 1,
    "rewardTier": "escalated",
  },
  "eliteRewards": [
    [
      "item_forkline_dynamo",
      "route source",
    ],
    [
      "item_lane_splitter_chisel",
      "Elite pool",
    ],
    [
      "item_claimant_arc_seal",
      "elite source",
    ],
  ],
  "rerollCosts": [
    3,
    4,
  ],
  "shop": {
    "count": 4,
    "items": [
      [
        "item_rebound_freight_seal",
        17,
        "shop source",
      ],
      [
        "item_crossfeed_detonator",
        21,
        "boss source",
      ],
      [
        "item_credit_reroute_fuse",
        14,
        "Shop pool",
      ],
      [
        "item_coin_operated_cannon",
        18,
        "Shop pool",
      ],
    ],
  },
  "vaultRewards": [
    [
      "item_plasma_bloom_filter",
      "vault source",
    ],
    [
      "item_excess_warhead_clause",
      "vault source",
    ],
    [
      "item_strata_bore_collimator",
      "vault source",
    ],
    [
      "item_overkill_ledger",
      "vault source",
    ],
  ],
}
`;

exports[`Act II economy tuning > keeps inter-act junction effects deterministic for fresh and progressed saves > fresh junction economy effects 1`] = `
[
  {
    "effects": {
      "creditsDelta": -4,
      "curseDelta": 0,
      "hullPatchDelta": 1,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shipRefit": {
        "bombCapacityDelta": 0,
        "hitRadiusDelta": 0,
        "specialChargeMultiplierDelta": 0,
        "speedDelta": 0,
      },
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-1-repair",
    "kind": "repair",
  },
  {
    "effects": {
      "creditsDelta": 0,
      "curseDelta": 0,
      "hullPatchDelta": 0,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shipRefit": {
        "bombCapacityDelta": 1,
        "hitRadiusDelta": 0,
        "specialChargeMultiplierDelta": 0.25,
        "speedDelta": 0,
      },
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-2-ordnance",
    "kind": "ordnance",
  },
  {
    "effects": {
      "creditsDelta": 0,
      "curseDelta": 0,
      "hullPatchDelta": 0,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shipRefit": {
        "bombCapacityDelta": 0,
        "hitRadiusDelta": -2,
        "specialChargeMultiplierDelta": 0,
        "speedDelta": 40,
      },
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-3-vector",
    "kind": "vector",
  },
]
`;

exports[`Act II economy tuning > keeps inter-act junction effects deterministic for fresh and progressed saves > progressed junction economy effects 1`] = `
[
  {
    "effects": {
      "creditsDelta": -3,
      "curseDelta": 0,
      "hullPatchDelta": 1,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shipRefit": {
        "bombCapacityDelta": 0,
        "hitRadiusDelta": 0,
        "specialChargeMultiplierDelta": 0,
        "speedDelta": 0,
      },
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-1-repair",
    "kind": "repair",
  },
  {
    "effects": {
      "creditsDelta": 0,
      "curseDelta": 0,
      "hullPatchDelta": 0,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shipRefit": {
        "bombCapacityDelta": 1,
        "hitRadiusDelta": 0,
        "specialChargeMultiplierDelta": 0.25,
        "speedDelta": 0,
      },
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-2-ordnance",
    "kind": "ordnance",
  },
  {
    "effects": {
      "creditsDelta": 0,
      "curseDelta": 0,
      "hullPatchDelta": 0,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shipRefit": {
        "bombCapacityDelta": 0,
        "hitRadiusDelta": -2,
        "specialChargeMultiplierDelta": 0,
        "speedDelta": 40,
      },
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-3-vector",
    "kind": "vector",
  },
]
`;
